<resources>
    <string name="app_name">Pick</string>
    <string name="PleaseEnterMessage">Please Enter Message</string>
    <string name="facebook_app_id">361883434545014</string>
    <string name="facebook_app_idOwner">395285601038826</string>
    <string-array name="sortarray">
        <item>Relevance</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
        <item>Year</item>
        <item>Distance</item>
    </string-array>
    <string name="fb_login_protocol_scheme">fb361883434545014</string>
    <string name="stringValue1">Profile</string>
    <string name="stringValue3">Password</string>
    <string name="slide_animation_duration">300</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have">You have %.1f Points</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="conect_with">Connect with</string>
    <string name="signup">SignUP</string>
    <string name="sms_with_a_4_digit_code_has_been_send_on_your_nmobile_number">An SMS with 4 digits code has been sent to your \n mobile number </string>
    <string name="Sar">SAR</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="i_accept_the_terms_amp_contition_and_privacy_policy">I accept the terms &amp; condition and privacy policy</string>
    <string name="profile_pciture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="individual">Individual</string>
    <string name="owner_type">Owner Type</string>
    <string name="company">Company</string>
    <string name="charge_for_one_kilometer">Charge for per kilometer</string>
    <string name="km">KM</string>
    <string name="pick_address">Pick Address</string>
    <string name="add_address">Add Address</string>
    <string name="drop_address">Drop Address</string>
    <string name="bank_account">Bank Account</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="bank_number">Bank Name</string>
    <string name="bank_address_branch">Bank Address/Branch</string>
    <string name="account_number">Account Number</string>
    <string name="iban_number">IBAN Number</string>
    <string name="password">password</string>
    <string name="yes">Yes</string>
    <string name="ready_to_deliver_vehicle_at_user_door">Ready to Deliver vehicle at User Door</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="delivery_charges_for_one_km">Delivery Charges Per Kilometer</string>
    <string name="name_as_on_driving">Name as on Driving License</string>
    <string name="driving_license_number">Enter Driving License Number</string>
    <string name="my_profile">My Profile</string>
    <string name="my_booking">My Booking</string>
    <string name="manage_vehicle">Manage Vehicle</string>
    <string name="manage_availability">Manage Availability</string>
    <string name="payment">Payments</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="plolicies">Policies</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="termscondition">terms &amp; condition</string>
    <string name="privacypolocy">privacy policy</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="profile_picture">Profile picture</string>
    <string name="google_login">Google Login</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="didn_t_reveived_code">Didn\'t Received Code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="enter_drop_address">Enter Drop Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="otp_code">OTP Code</string>
    <string name="amount">Amount</string>
    <string name="enter_driving_license_number">Enter Driving License Number</string>
    <string name="name_as_on_driving_license">Name as on Driving License</string>
    <string name="set_location_manually">Set Location Manually</string>
    <string name="address_landmark">Address,Landmark</string>
    <string name="please_enter_drop_location">Please enter drop location</string>
    <string name="please_enter_drop_pindcode">Please enter drop pincode</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_one_km_charge">Please enter charge for one km</string>
    <string name="please_enter_pick_location">Please enter pick location</string>
    <string name="please_enter_beneficiary_name">Please enter beneficiary name</string>
    <string name="pleaseselectprofilepic">Please select profile picture</string>
    <string name="back_exit">Please click BACK again to exit</string>
    <string name="please_enter_bank_name">Please enter bank name</string>
    <string name="please_enter_bank_address">Please enter bank address/branch</string>
    <string name="please_enter_account_no">Please enter account number</string>
    <string name="please_enter_ibn_no">Please enter IBAN number</string>
    <string name="please_enter_driving_license_no">Please enter driving license number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="Confirmpasswordisnotmatch">Confirm password is not match</string>
    <string name="newconfirm">New Password and Confirm Password doesn\'t match</string>
    <string name="please_enter_otp_code">Please enter OTP code</string>
    <string name="invalid_email">Invalid email</string>
    <string name="please_enter_vaild_mobile_no">Please enter valid mobile number</string>
    <string name="Pleaselectdrivinglicensepic">Please select driving license picture</string>
    <string name="please_accept_term_and_condition">Please accept terms &amp; condition and privacy policy</string>
    <string name="email">email</string>
    <string name="mobile">mobile Number</string>
    <string name="number">number</string>
    <string name="book_now">Book Now</string>
    <string name="info">Info</string>
    <string name="Discount">Long Term Discounts</string>
    <string name="favorite_vechicle">Favourites Vehicle</string>
    <string name="change_password">Change Password</string>
    <string name="ok">Ok</string>
    <string name="oi">oi</string>
    <string name="oc">oc</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pleaserestartappnotgettinglocationperoperly">Please restart App as not getting location properly</string>
    <string name="pleaserebootyourdevice">Please reboot your device</string>
    <string name="add_image">ADD\nImage</string>
    <string name="fuel_amount_before_pick_up">Fuel Before Pick Up</string>
    <string name="before_pick_up_kilometer">Before Pick Up kilometer</string>
    <string name="before_pickup_car_picture">Before Pickup car Picture</string>
    <string name="checkup_before">Checkup Before</string>
    <string name="pickup_time">PICKUP TIME</string>
    <string name="drop_off_time">DROP OFF TIME</string>
    <string name="pick_up">Pick up</string>
    <string name="total_amount_received_by_owner">Total Amount received by owner:</string>
    <string name="jayden_ethan">Jayden Ethan</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="transmission">Transmission</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="where">Where</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="want_to_drop_my_vehicle_different_city">I want to drop my vehicle in a different city</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="time_format">HH:mm AM</string>
    <string name="select_city">Select City</string>
    <string name="delivery_my_door">Delivery at my door</string>
    <string name="search">Search</string>
    <string name="select_language">Select Language</string>
    <string name="email_address">Email Address</string>
    <string name="enter_address_for_delivery">Enter address for delivery</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="message">Message</string>
    <string name="driving_license_number_fill">Driving License Number</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="please_select_to_time">Please select to time</string>
    <string name="please_select_to_date">Please select to date</string>
    <string name="please_select_from_time">Please select from time</string>
    <string name="please_select_from_date">Please select from date and time</string>
    <string name="please_select_where">Please select where</string>
    <string name="Refund_amount">That`s a Security amount it will be refunded back to you</string>
    <string name="pay_amount">This is amount include all the charges that You will have to pay</string>
    <string name="drop_amount">These are the charges of dropping vehicle in a different city</string>
    <string name="drop_location_max_twenty">Drop Location max up to 20</string>
    <string name="confirm">Confirm</string>
    <string name="checkup_before_requested">Checkup before requested</string>
    <string name="pickedup">Picked Up</string>
    <string name="trip_completion_request_by_user">Trip completion request by user</string>
    <string name="trip_completion_request">Trip completion request</string>
    <string name="check_after_request_submitted">Check after request submitted</string>
    <string name="dropped">Dropped</string>
    <string name="No">No</string>
    <string name="vehicle_damage_charges">Vehicle Damage Charges</string>
    <string name="payable_amt">Payable Amount</string>
    <string name="extended_chargs">Extended Charges</string>
    <string name="extra_kilo_charge">Extra kilometer Charges</string>
    <string name="fuel_chargs">Fuel Charges</string>
    <string name="car_accessories_charges">Car Accessories Charges</string>
    <string name="late_return_charges">Late Return Charges</string>
    <string name="refundable_charges">Refundable Amount</string>
    <string name="paid_amt">Paid Amount</string>
    <string name="total_amount">Total Amount</string>
</resources>